Responsive Design and README updated.